increace font size for cotents as well as tabs name

--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -23,7 +23,7 @@
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/profile.png">
           </ion-thumbnail>
-          <h2 >Profile</h2>
+          <p >Profile</p>
         </ion-item>
       </ion-list>
     </ion-col>
@@ -33,7 +33,7 @@
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/about.png">
           </ion-thumbnail>
-          <h2 >About</h2>
+          <p >About</p>
         </ion-item>
       </ion-list>
     </ion-col>
@@ -48,7 +48,7 @@
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/help.png">
           </ion-thumbnail>
-          <h2 >Help</h2>
+          <p >Help</p>
         </ion-item>
       </ion-list>
     </ion-col>
@@ -58,7 +58,7 @@
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/settings.png">
           </ion-thumbnail>
-          <h2 >Settings</h2>
+          <p >Settings</p>
         </ion-item>
       </ion-list>
     </ion-col>
@@ -72,7 +72,7 @@
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/updateManager.png">
           </ion-thumbnail>
-          <h2 >Update Manager</h2>
+          <p >Update Manager</p>
         </ion-item>
       </ion-list>
     </ion-col>
@@ -82,7 +82,7 @@
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/logout.png">
           </ion-thumbnail>
-          <h2 >Logout</h2>
+          <p >Logout</p>
         </ion-item>
       </ion-list>
     </ion-col>
