--- a/src/pages/apps/apps.html
+++ b/src/pages/apps/apps.html
@@ -22,17 +22,17 @@
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/dataEntry.png">
           </ion-thumbnail>
-          <h2 >Data Entry</h2>
+          <p >Data Entry</p>
         </ion-item>
       </ion-list>
     </ion-col>
     <ion-col width-45 (click)="goToView('eventCapture')" >
       <ion-list >
-        <ion-item >
+        <ion-item>
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/eventCapture.png">
           </ion-thumbnail>
-          <h2 >Event Capture</h2>
+          <p >Event Capture</p>
         </ion-item>
       </ion-list>
     </ion-col>
@@ -45,7 +45,7 @@
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/dashboard.png">
           </ion-thumbnail>
-          <h2 >Dashboard</h2>
+          <p >Dashboard</p>
         </ion-item>
       </ion-list>
     </ion-col>
