--- a/src/pages/period-selection/period-selection.html
+++ b/src/pages/period-selection/period-selection.html
@@ -16,10 +16,10 @@
   <ion-grid>
     <ion-row>
       <ion-col width="50">
-        <button class="dataEntryButton" ion-button full large (click)="previous()" color="whitecolor">Previous</button>
+        <button class="dataEntryButton" text-capitalize ion-button full large (click)="previous()" color="whitecolor">Previous</button>
       </ion-col>
       <ion-col width="50">
-        <button class="dataEntryButton" ion-button full large (click)="next()" color="whitecolor">Next</button>
+        <button class="dataEntryButton" text-capitalize ion-button full large (click)="next()" color="whitecolor">Next</button>
       </ion-col>
     </ion-row>
 
