preselect organisation unit on data entry as well as disable selections instead ot pop message to select abouve filed in entry form sleections

--- a/src/pages/data-entry-home/data-entry-home.html
+++ b/src/pages/data-entry-home/data-entry-home.html
@@ -36,21 +36,21 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <button class="dataEntryButton" text-capitalize ion-button full large (click)="openOrganisationUnitModal()" color="whitecolor">
+          <button [disabled]="!currentSelectionStatus.orgUnit" class="dataEntryButton" text-capitalize ion-button full large (click)="openOrganisationUnitModal()" color="whitecolor">
             {{ selectedOrganisationUnitLabel }}
           </button>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
-          <button class="dataEntryButton" text-capitalize ion-button full large (click)="openDataSetsModal()" color="whitecolor">
+          <button [disabled]="!currentSelectionStatus.dataSet" class="dataEntryButton" text-capitalize ion-button full large (click)="openDataSetsModal()" color="whitecolor">
             {{ selectedDataSetLabel }}
           </button>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
-          <button class="dataEntryButton" text-capitalize ion-button full large (click)="openPeriodModal()" color="whitecolor">
+          <button [disabled]="!currentSelectionStatus.period" class="dataEntryButton" text-capitalize ion-button full large (click)="openPeriodModal()" color="whitecolor">
             {{ selectedPeriodLabel }}
           </button>
         </ion-col>
