--- a/src/pages/event-capture-form/event-capture-form.html
+++ b/src/pages/event-capture-form/event-capture-form.html
@@ -14,18 +14,24 @@
 
 <ion-content class="event-capture-form" >
   <div *ngIf="loadingData">
-    <ion-list>
-      <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
-        {{ message }}
-        <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="primary"></ion-icon>
-        <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
-          <ion-spinner name="crescent" color="secondary"></ion-spinner>
-        </div>
-      </ion-item>
-    </ion-list>
+    <ion-grid>
+      <ion-row>
+        <ion-col width="100">
+          <ion-list>
+            <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
+              {{ message }}
+              <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="primary"></ion-icon>
+              <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
+                <ion-spinner name="crescent" color="secondary"></ion-spinner>
+              </div>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
 
-  <div *ngIf="!loadingData">
+  <div *ngIf="!loadingData" padding>
     <!-- selected orgUnit labels -->
     <ion-item-group (click)="navCtrl.pop()" *ngIf="entryFormParameter">
       <ion-item-divider>
