--- a/src/pages/event-capture-form/event-capture-form.html
+++ b/src/pages/event-capture-form/event-capture-form.html
@@ -35,8 +35,8 @@
     <!-- selected orgUnit labels -->
     <ion-item-group (click)="navCtrl.pop()" *ngIf="entryFormParameter">
       <ion-item-divider>
-        <p style="color: #000;"><b>Organisation Unit</b> : {{ entryFormParameter.orgUnitName }}</p>
-        <p style="color: #000;"><b>Form</b> : {{ entryFormParameter.programName }}</p>
+        <p ><b>Organisation Unit</b> : {{ entryFormParameter.orgUnitName }}</p>
+        <p ><b>Form</b> : {{ entryFormParameter.programName }}</p>
       </ion-item-divider>
     </ion-item-group>
     <ion-list></ion-list>
