--- a/src/pages/event-capture-home/event-capture-home.html
+++ b/src/pages/event-capture-home/event-capture-home.html
@@ -159,7 +159,7 @@
             <ion-col width="100">
               <ion-item-group wrap text>
                 <ion-item-divider wrap text>
-                  <p wrap text >There are no events, to register new event  <span (click)="goToEventRegister()" color="primary"><b>click here</b></span></p>
+                  <p wrap text >There are no events at the moment</p>
                 </ion-item-divider>
               </ion-item-group>
             </ion-col>
