--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -54,7 +54,7 @@
 
     <ion-row *ngIf="!loadingData">
       <ion-col width-100>
-        <button (click)="login()" ion-button full>
+        <button (click)="login()" ion-button full text-capitalize>
           Login
         </button>
       </ion-col>
