--- a/src/pages/setting-detail/setting-detail.html
+++ b/src/pages/setting-detail/setting-detail.html
@@ -64,7 +64,7 @@
     </ion-row>
     <ion-row>
       <ion-col width="100">
-        <button ion-button full (click)="saveSetting()">Save </button>
+        <button ion-button full text-capitalize (click)="saveSetting()">Save </button>
       </ion-col>
     </ion-row>
   </div>
