--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -13,68 +13,77 @@
 </ion-header>
 
 
-<ion-content class="profile" padding>
+<ion-content class="profile" >
   <div *ngIf="loadingData">
-    <ion-list>
-      <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
-        {{ message }}
-        <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="primary"></ion-icon>
-        <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
-          <ion-spinner name="crescent" color="secondary"></ion-spinner>
-        </div>
-      </ion-item>
-    </ion-list>
+    <ion-grid>
+      <ion-row>
+        <ion-col width="100">
+          <ion-list>
+            <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
+              {{ message }}
+              <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="primary"></ion-icon>
+              <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
+                <ion-spinner name="crescent" color="secondary"></ion-spinner>
+              </div>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
+
   <div *ngIf="!loadingData">
-    <ion-row>
-      <ion-col width="100">
-        <ion-item-group>
-          <ion-item-divider color="primary">
-            <b>App Information</b>
-          </ion-item-divider>
-          <ion-item *ngFor="let entry of profileInformation">
-            <h2>{{ entry.key }}</h2>
-            <p>{{ entry.value }}</p>
-          </ion-item>
-        </ion-item-group>
-        <ion-list></ion-list>
-        <ion-item-group>
-          <ion-item-divider color="primary">
-            <b>Assigned Organisation Units</b>
-          </ion-item-divider>
-          <ion-item *ngFor="let assignOrgUnit of  assignOrgUnits;let currentIndex = index">
-            <p>{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ assignOrgUnit }}</p>
-          </ion-item>
-        </ion-item-group>
-        <ion-list></ion-list>
-        <ion-item-group>
-          <ion-item-divider color="primary">
-            <b>Assigned user roles</b>
-          </ion-item-divider>
-          <ion-item *ngFor="let userRole of userRoles;let currentIndex = index">
-            <p>{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ userRole }}</p>
-          </ion-item>
-        </ion-item-group>
-        <ion-list></ion-list>
-        <ion-item-group>
-          <ion-item-divider color="primary">
-            <b>Assigned programs</b>
-          </ion-item-divider>
-          <ion-item *ngFor="let assignedProgram of assignedPrograms ;let currentIndex = index">
-            <p>{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ assignedProgram }}</p>
-          </ion-item>
-        </ion-item-group>
-        <ion-list></ion-list>
-        <ion-item-group>
-          <ion-item-divider color="primary">
-            <b>Assigned forms</b>
-          </ion-item-divider>
-          <ion-item *ngFor="let assignedForm  of assignedForms ;let currentIndex = index">
-            <p>{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ assignedForm }}</p>
-          </ion-item>
-        </ion-item-group>
-      </ion-col>
-    </ion-row>
+    <ion-grid>
+      <ion-row>
+        <ion-col width="100">
+          <ion-item-group>
+            <ion-item-divider color="primary">
+              <b>App Information</b>
+            </ion-item-divider>
+            <ion-item *ngFor="let entry of profileInformation">
+              <h2>{{ entry.key }}</h2>
+              <p>{{ entry.value }}</p>
+            </ion-item>
+          </ion-item-group>
+          <ion-list></ion-list>
+          <ion-item-group>
+            <ion-item-divider color="primary">
+              <b>Assigned Organisation Units</b>
+            </ion-item-divider>
+            <ion-item *ngFor="let assignOrgUnit of  assignOrgUnits;let currentIndex = index">
+              <p>{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ assignOrgUnit }}</p>
+            </ion-item>
+          </ion-item-group>
+          <ion-list></ion-list>
+          <ion-item-group>
+            <ion-item-divider color="primary">
+              <b>Assigned user roles</b>
+            </ion-item-divider>
+            <ion-item *ngFor="let userRole of userRoles;let currentIndex = index">
+              <p>{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ userRole }}</p>
+            </ion-item>
+          </ion-item-group>
+          <ion-list></ion-list>
+          <ion-item-group>
+            <ion-item-divider color="primary">
+              <b>Assigned programs</b>
+            </ion-item-divider>
+            <ion-item *ngFor="let assignedProgram of assignedPrograms ;let currentIndex = index">
+              <p>{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ assignedProgram }}</p>
+            </ion-item>
+          </ion-item-group>
+          <ion-list></ion-list>
+          <ion-item-group>
+            <ion-item-divider color="primary">
+              <b>Assigned forms</b>
+            </ion-item-divider>
+            <ion-item *ngFor="let assignedForm  of assignedForms ;let currentIndex = index">
+              <p>{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ assignedForm }}</p>
+            </ion-item>
+          </ion-item-group>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
 
 </ion-content>
