update size of login button as well as capitalize hisptz slogan

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -54,7 +54,7 @@
 
     <ion-row *ngIf="!loadingData">
       <ion-col width-100>
-        <button (click)="login()" ion-button full text-capitalize>
+        <button (click)="login()" class="normalButton" ion-button full large text-capitalize>
           Login
         </button>
       </ion-col>
@@ -62,7 +62,7 @@
 
     <ion-row>
       <ion-col class="bottomSLogan" width-100 >
-        <p>Powered by Hisptz</p>
+        <p>Powered by HISPTZ</p>
       </ion-col>
     </ion-row>
   </ion-grid>
