replace dhis 2 logo with dhis 2 touch

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -12,7 +12,9 @@
 
     <ion-row>
       <ion-col class="topSLogan" width-100 >
-        <img [src]="loginData.logoUrl" >
+        <div class="logo">
+          <img [src]="logoUrl" >
+        </div>
         <p >Routine and survey data on your pocket</p>
       </ion-col>
 
